<resources>
    <string name="app_name">WaterAssist</string>
    <string name="drain_assist">Drain Assist</string>
    <string name="water_assist">Water Assist</string>
    <string name="plumber_assist">Plumber Assist</string>
    <string name="home_buyer_assist">Home Buyer Assist</string>
    <string name="building_assist">Building Assist</string>

    <string name="emergency_unblock">Emergency Unblock</string>
    <string name="drainage_survey">Drainage Survey</string>
    <string name="drainage_repairs">Drainage Repairs</string>
    <string name="septic_or_treatment_tank">Septic or Treatment Tank</string>
    <string name="new_installation">New Installation</string>
    <string name="maintenance"> Maintenance</string>

    <string name="email_string">info@catalystclaims.com</string>

</resources>
