<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/emergency_unblock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/emergency_unblock_effect"
                android:text="@string/emergency_unblock"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/drainage_survey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/water_assist"
                android:text="@string/drainage_survey"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/drainage_repairs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/plumber_assist"
                android:text="@string/drainage_repairs"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/septic_or_treatment_tank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_assist"
                android:text="@string/septic_or_treatment_tank"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/new_installation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/building_assist"
                android:text="@string/new_installation"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/maintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/building_assist"
                android:text="@string/maintenance"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
